we used flex-wrap: wrap in the .right class to make sure the cards did not overflow from the page

--- a/07-flex-layout-2/style.css
+++ b/07-flex-layout-2/style.css
@@ -20,8 +20,7 @@ body {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
-  height: 100%;
-  
+  /* height: 100%; */
 }
 
 .card {
@@ -38,6 +37,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
 }
 
 .middle {
@@ -45,6 +45,26 @@ body {
   flex-grow: 1;
 }
 
+.right {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 32px;
+}
+
+.card {
+  width: 300px;
+}
+
+.sidebar {
+  height: 100%;
+  flex-shrink: 0;
+  flex-grow: 1;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+}
 
 
 
